// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contribution /> should NOT render invalid preselected convention 1`] = `
.c10 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c12 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c20:link,
.c20:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c20:not([disabled]):hover,
.c20:not([disabled]):active,
.c20:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c20[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
}

.c23:link,
.c23:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c23:not([disabled]):hover,
.c23:not([disabled]):active,
.c23:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c23[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c4 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 4.2rem;
  height: 4.2rem;
  margin-right: 2.4rem;
}

.c5 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c16 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #f66663;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c19 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c21 {
  margin-top: 0.4rem;
  color: #f66663;
}

.c6 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c7 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c13 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c8 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c15 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c11 {
  padding-bottom: 0;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  margin-bottom: 3.2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  margin-bottom: 0.4rem;
  color: #f66663;
}

.c14 {
  margin-top: 3.2rem;
}

.c22 {
  margin: 1.6rem 0 !important;
  text-align: center;
}

.c24 {
  width: 2.8rem;
  margin-left: 1.6rem;
}

@media (max-width:600px) {
  .c10 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c20 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c23 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c23 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c4 {
    width: 3.4rem;
    margin-right: 1rem;
  }
}

@media print {
  .c18 {
    display: none;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c13 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c15 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c2 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        fill="none"
        viewBox="0 0 32 32"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 013.562-3.563 3.548 3.548 0 013.563 3.563 3.548 3.548 0 01-3.563 3.563 3.548 3.548 0 01-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112l.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <svg
          fill="none"
          viewBox="0 0 52 52"
        >
          <path
            clip-rule="evenodd"
            d="M17 2L6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 011 1v27h2V5a3 3 0 00-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 01-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 003 3h18zM7 20a1 1 0 100-2 1 1 0 000 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 00-3.563 3.562 3.548 3.548 0 003.563 3.563 3.548 3.548 0 003.563-3.563 3.548 3.548 0 00-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          Page personnalisable
        </div>
        Cette page a été personnalisée avec l’ajout des
         
        <a
          href="#customisation"
        >
          informations de la convention collective :
           
          short preselected convention
        </a>
      </div>
    </div>
  </div>
  <section>
    <header
      class="c7"
    >
      <h2
        class="c8"
      >
        <div
          class="c9"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="c10 c11"
  >
    <div
      class="c12"
    >
      <header
        class="c13 c14"
        id="customisation"
      >
        <h2
          class="c15"
        >
          <div
            class="c16"
          />
          Que dit votre convention collective ?
        </h2>
      </header>
      <div
        class="c17"
      >
        Ce contenu est personnalisé avec les informations de la convention collective:
      </div>
      <div
        class="c18"
      >
        <div
          class="c19"
          role="alert"
        >
          short preselected convention
        </div>
        <button
          aria-label="Fermer"
          class="c20"
        >
          <svg
            class="c21"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            variant="primary"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
      <div
        class="c10"
      >
        Désolé, nous n’avons pas de réponse pour cette convention collective.
      </div>
      <div
        class="c22"
      >
        <button
          class="c23"
        >
          Changer de convention collective
          <svg
            class="c24"
            fill="none"
            viewBox="0 0 32 32"
          >
            <path
              clip-rule="evenodd"
              d="M14.752 16.5L7.258 8.591A.957.957 0 017 7.932c0-.247.093-.484.259-.659A.858.858 0 017.883 7a.86.86 0 01.625.273L16 15.183l7.492-7.91A.859.859 0 0124.117 7c.234 0 .459.098.624.273a.957.957 0 01.259.659.957.957 0 01-.259.66L17.249 16.5l7.492 7.909a.958.958 0 01.259.659.957.957 0 01-.259.659.859.859 0 01-.624.273.86.86 0 01-.625-.273L16 17.817l-7.492 7.91a.859.859 0 01-.625.273.859.859 0 01-.624-.273.957.957 0 01-.259-.659.96.96 0 01.259-.66l7.492-7.908z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render answer references 1`] = `
.c10 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c12 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c20:link,
.c20:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c20:not([disabled]):hover,
.c20:not([disabled]):active,
.c20:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c20[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
}

.c26:link,
.c26:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c26:not([disabled]):hover,
.c26:not([disabled]):active,
.c26:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c26[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c4 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 4.2rem;
  height: 4.2rem;
  margin-right: 2.4rem;
}

.c5 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c16 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c23 {
  position: relative;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c24 {
  display: block;
  margin: 0 0 1rem 0;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.2rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  text-transform: uppercase;
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #f66663;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c19 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c21 {
  margin-top: 0.4rem;
  color: #f66663;
}

.c6 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c7 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c13 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c8 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c15 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c22 {
  margin-bottom: 2rem;
}

.c11 {
  padding-bottom: 0;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  margin-bottom: 3.2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  margin-bottom: 0.4rem;
  color: #f66663;
}

.c14 {
  margin-top: 3.2rem;
}

.c25 {
  margin: 1.6rem 0 !important;
  text-align: center;
}

.c27 {
  width: 2.8rem;
  margin-left: 1.6rem;
}

@media (max-width:600px) {
  .c10 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c20 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c26 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c26 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c4 {
    width: 3.4rem;
    margin-right: 1rem;
  }
}

@media (max-width:600px) {
  .c23 {
    font-size: 1.6rem;
  }
}

@media print {
  .c18 {
    display: none;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c13 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c15 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c2 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        fill="none"
        viewBox="0 0 32 32"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 013.562-3.563 3.548 3.548 0 013.563 3.563 3.548 3.548 0 01-3.563 3.563 3.548 3.548 0 01-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112l.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <svg
          fill="none"
          viewBox="0 0 52 52"
        >
          <path
            clip-rule="evenodd"
            d="M17 2L6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 011 1v27h2V5a3 3 0 00-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 01-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 003 3h18zM7 20a1 1 0 100-2 1 1 0 000 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 00-3.563 3.562 3.548 3.548 0 003.563 3.563 3.548 3.548 0 003.563-3.563 3.548 3.548 0 00-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          Page personnalisable
        </div>
        Cette page a été personnalisée avec l’ajout des
         
        <a
          href="#customisation"
        >
          informations de la convention collective :
           
          short preselected convention
        </a>
      </div>
    </div>
  </div>
  <section>
    <header
      class="c7"
    >
      <h2
        class="c8"
      >
        <div
          class="c9"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="c10 c11"
  >
    <div
      class="c12"
    >
      <header
        class="c13 c14"
        id="customisation"
      >
        <h2
          class="c15"
        >
          <div
            class="c16"
          />
          Que dit votre convention collective ?
        </h2>
      </header>
      <div
        class="c17"
      >
        Ce contenu est personnalisé avec les informations de la convention collective:
      </div>
      <div
        class="c18"
      >
        <div
          class="c19"
          role="alert"
        >
          short preselected convention
        </div>
        <button
          aria-label="Fermer"
          class="c20"
        >
          <svg
            class="c21"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            variant="primary"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
      <div
        class="c22"
      >
        <div>
          <p>
            hello 
            <strong>
              123
            </strong>
          </p>
        </div>
      </div>
      <h3
        class="c23"
      >
        Références
      </h3>
      <span
        class="c24"
      >
        Convention collective
      </span>
      <ul>
        <li>
          <a
            href="http://path/to/agreement"
            rel="noopener noreferrer"
            target="_blank"
          >
            reference CC 1
          </a>
        </li>
      </ul>
      <span
        class="c24"
      >
        Autres sources
      </span>
      <ul>
        <li>
          <a
            href="http://path/to/ref"
            rel="noopener noreferrer"
            target="_blank"
          >
            reference externe 1
          </a>
        </li>
      </ul>
      <div
        class="c25"
      >
        <button
          class="c26"
        >
          Changer de convention collective
          <svg
            class="c27"
            fill="none"
            viewBox="0 0 32 32"
          >
            <path
              clip-rule="evenodd"
              d="M14.752 16.5L7.258 8.591A.957.957 0 017 7.932c0-.247.093-.484.259-.659A.858.858 0 017.883 7a.86.86 0 01.625.273L16 15.183l7.492-7.91A.859.859 0 0124.117 7c.234 0 .459.098.624.273a.957.957 0 01.259.659.957.957 0 01-.259.66L17.249 16.5l7.492 7.909a.958.958 0 01.259.659.957.957 0 01-.259.659.859.859 0 01-.624.273.86.86 0 01-.625-.273L16 17.817l-7.492 7.91a.859.859 0 01-.625.273.859.859 0 01-.624-.273.957.957 0 01-.259-.659.96.96 0 01.259-.66l7.492-7.908z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render preselected convention 1`] = `
.c10 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c12 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c20:link,
.c20:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c20:not([disabled]):hover,
.c20:not([disabled]):active,
.c20:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c20[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #f66663;
  border-color: #f66663;
  box-shadow: 0px 10px 20px rgba(246,102,99,0.26),0px 5px 7px rgba(246,102,99,0.35);
  opacity: 1;
}

.c24:link,
.c24:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c24:not([disabled]):hover,
.c24:not([disabled]):active,
.c24:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #f99593;
  border-color: #f99593;
}

.c24[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c4 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 4.2rem;
  height: 4.2rem;
  margin-right: 2.4rem;
}

.c5 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c16 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #f66663;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c19 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c21 {
  margin-top: 0.4rem;
  color: #f66663;
}

.c6 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c7 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c13 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c8 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c15 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c22 {
  margin-bottom: 2rem;
}

.c11 {
  padding-bottom: 0;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  margin-bottom: 3.2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  margin-bottom: 0.4rem;
  color: #f66663;
}

.c14 {
  margin-top: 3.2rem;
}

.c23 {
  margin: 1.6rem 0 !important;
  text-align: center;
}

.c25 {
  width: 2.8rem;
  margin-left: 1.6rem;
}

@media (max-width:600px) {
  .c10 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c20 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c24 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c24 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c4 {
    width: 3.4rem;
    margin-right: 1rem;
  }
}

@media print {
  .c18 {
    display: none;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c13 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c15 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c2 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        fill="none"
        viewBox="0 0 32 32"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 013.562-3.563 3.548 3.548 0 013.563 3.563 3.548 3.548 0 01-3.563 3.563 3.548 3.548 0 01-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112l.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <svg
          fill="none"
          viewBox="0 0 52 52"
        >
          <path
            clip-rule="evenodd"
            d="M17 2L6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 011 1v27h2V5a3 3 0 00-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 01-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 003 3h18zM7 20a1 1 0 100-2 1 1 0 000 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 00-3.563 3.562 3.548 3.548 0 003.563 3.563 3.548 3.548 0 003.563-3.563 3.548 3.548 0 00-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          Page personnalisable
        </div>
        Cette page a été personnalisée avec l’ajout des
         
        <a
          href="#customisation"
        >
          informations de la convention collective :
           
          short preselected convention
        </a>
      </div>
    </div>
  </div>
  <section>
    <header
      class="c7"
    >
      <h2
        class="c8"
      >
        <div
          class="c9"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="c10 c11"
  >
    <div
      class="c12"
    >
      <header
        class="c13 c14"
        id="customisation"
      >
        <h2
          class="c15"
        >
          <div
            class="c16"
          />
          Que dit votre convention collective ?
        </h2>
      </header>
      <div
        class="c17"
      >
        Ce contenu est personnalisé avec les informations de la convention collective:
      </div>
      <div
        class="c18"
      >
        <div
          class="c19"
          role="alert"
        >
          short preselected convention
        </div>
        <button
          aria-label="Fermer"
          class="c20"
        >
          <svg
            class="c21"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            variant="primary"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
      <div
        class="c22"
      >
        <div>
          <p>
            hello 
            <strong>
              123
            </strong>
          </p>
        </div>
      </div>
      <div
        class="c23"
      >
        <button
          class="c24"
        >
          Changer de convention collective
          <svg
            class="c25"
            fill="none"
            viewBox="0 0 32 32"
          >
            <path
              clip-rule="evenodd"
              d="M14.752 16.5L7.258 8.591A.957.957 0 017 7.932c0-.247.093-.484.259-.659A.858.858 0 017.883 7a.86.86 0 01.625.273L16 15.183l7.492-7.91A.859.859 0 0124.117 7c.234 0 .459.098.624.273a.957.957 0 01.259.659.957.957 0 01-.259.66L17.249 16.5l7.492 7.909a.958.958 0 01.259.659.957.957 0 01-.259.659.859.859 0 01-.624.273.86.86 0 01-.625-.273L16 17.817l-7.492 7.91a.859.859 0 01-.625.273.859.859 0 01-.624-.273.957.957 0 01-.259-.659.96.96 0 01.259-.66l7.492-7.908z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render with both answers 1`] = `
.c10 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c12 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c4 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 4.2rem;
  height: 4.2rem;
  margin-right: 2.4rem;
}

.c5 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c16 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c17 {
  position: relative;
  display: inline-block;
}

.c19 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c19[disabled] {
  color: #9298af;
  background-color: #e4e8ef;
  box-shadow: none;
  cursor: not-allowed;
}

.c19::-webkit-outer-spin-button,
.c19::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c19::-webkit-calendar-picker-indicator {
  display: block;
  width: 3.2rem;
  height: 3.2rem;
  margin-right: -2rem;
  color: rgba(0,0,0,0);
  background-color: #9298af;
  cursor: pointer;
  opacity: 1;
  -webkit-mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
  mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
}

.c19:invalid {
  border-color: #eb5757;
}

.c19::-webkit-input-placeholder {
  color: #9298af;
}

.c19::-moz-placeholder {
  color: #9298af;
}

.c19:-ms-input-placeholder {
  color: #9298af;
}

.c19::placeholder {
  color: #9298af;
}

.c19:focus {
  border-color: #7994d4;
}

.c19:focus::-webkit-input-placeholder {
  color: transparent;
}

.c19:focus::-moz-placeholder {
  color: transparent;
}

.c19:focus:-ms-input-placeholder {
  color: transparent;
}

.c19:focus::placeholder {
  color: transparent;
}

.c6 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c7 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c13 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c8 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c15 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c18 {
  display: block;
}

.c11 {
  padding-bottom: 0;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  margin-bottom: 3.2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  margin-top: 3.2rem;
}

@media (max-width:600px) {
  .c10 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c4 {
    width: 3.4rem;
    margin-right: 1rem;
  }
}

@media (max-width:600px) {
  .c17 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c19 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c13 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c15 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c2 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        fill="none"
        viewBox="0 0 32 32"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 013.562-3.563 3.548 3.548 0 013.563 3.563 3.548 3.548 0 01-3.563 3.563 3.548 3.548 0 01-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112l.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <svg
          fill="none"
          viewBox="0 0 52 52"
        >
          <path
            clip-rule="evenodd"
            d="M17 2L6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 011 1v27h2V5a3 3 0 00-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 01-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 003 3h18zM7 20a1 1 0 100-2 1 1 0 000 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 00-3.563 3.562 3.548 3.548 0 003.563 3.563 3.548 3.548 0 003.563-3.563 3.548 3.548 0 00-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          Page personnalisable
        </div>
        Le contenu de cette page peut être personnalisé en fonction de votre situation.
         
        <a
          href="#customisation"
        >
          Voir en bas de page
        </a>
         pour renseigner votre convention collective.
      </div>
    </div>
  </div>
  <section>
    <header
      class="c7"
    >
      <h2
        class="c8"
      >
        <div
          class="c9"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="c10 c11"
  >
    <div
      class="c12"
    >
      <header
        class="c13 c14"
        id="customisation"
      >
        <h2
          class="c15"
        >
          <div
            class="c16"
          />
          Que dit votre convention collective ?
        </h2>
      </header>
      
      <p>
        Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
      </p>
      <span
        class="c17 c18"
      >
        <input
          class="c19"
          name="q"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
      </span>
      
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render with conventions answer 1`] = `
.c7 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c9 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c4 {
  display: block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 4.2rem;
  height: 4.2rem;
  margin-right: 2.4rem;
}

.c5 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c13 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c14 {
  position: relative;
  display: inline-block;
}

.c16 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c16[disabled] {
  color: #9298af;
  background-color: #e4e8ef;
  box-shadow: none;
  cursor: not-allowed;
}

.c16::-webkit-outer-spin-button,
.c16::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c16::-webkit-calendar-picker-indicator {
  display: block;
  width: 3.2rem;
  height: 3.2rem;
  margin-right: -2rem;
  color: rgba(0,0,0,0);
  background-color: #9298af;
  cursor: pointer;
  opacity: 1;
  -webkit-mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
  mask-image: url("data:image/svg+xml;,%3Csvg%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M20.947%207.601h1.601c1.472%200%202.521%201.198%202.521%202.669v2.306l-.001%2010.392c0%201.472-1.049%202.669-2.521%202.669H8.669A2.672%202.672%200%20016%2022.967l.001-12.697a2.672%202.672%200%20012.67-2.669h1.331V6h.999v1.601H20V6h.947v1.601zm1.6%2017.036c.883%200%201.454-.786%201.454-1.67v-10.33h-17L7%2022.967c0%20.884.785%201.67%201.668%201.67h13.879zm-15.548-13h17.002l.001-1.367c0-.883-.57-1.601-1.453-1.601h-1.6v1.068H20V8.669h-9v1.068h-1V8.669H8.669C7.786%208.669%207%209.387%207%2010.27v1.367zm9.677%206.277h-2.135a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203h-2.135v2.135h2.136v-2.135zm3.203%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068H19.88a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135H19.88v-2.135zm-8.54%208.541H9.204a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H9.204v2.135h2.136l-.001-2.135zm3.202%203.203h2.135a1.07%201.07%200%20001.068-1.068v-2.135a1.07%201.07%200%2000-1.068-1.068h-2.135a1.07%201.07%200%2000-1.068%201.068v2.135a1.07%201.07%200%20001.068%201.068zm0-3.203h2.135l.001%202.135h-2.136v-2.135zm7.473%203.203H19.88a1.07%201.07%200%2001-1.068-1.068v-2.135a1.07%201.07%200%20011.068-1.068h2.135a1.07%201.07%200%20011.068%201.068v2.135a1.07%201.07%200%2001-1.068%201.068zm0-3.203H19.88v2.135h2.136v-2.135z%22%20fill%3D%22currentColor%22%2F%3E%3C%2Fsvg%3E");
}

.c16:invalid {
  border-color: #eb5757;
}

.c16::-webkit-input-placeholder {
  color: #9298af;
}

.c16::-moz-placeholder {
  color: #9298af;
}

.c16:-ms-input-placeholder {
  color: #9298af;
}

.c16::placeholder {
  color: #9298af;
}

.c16:focus {
  border-color: #7994d4;
}

.c16:focus::-webkit-input-placeholder {
  color: transparent;
}

.c16:focus::-moz-placeholder {
  color: transparent;
}

.c16:focus:-ms-input-placeholder {
  color: transparent;
}

.c16:focus::placeholder {
  color: transparent;
}

.c6 {
  margin: 0 0 1rem 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c10 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: -2.4rem;
  text-align: left;
}

.c12 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 2.4rem;
  text-align: left;
}

.c15 {
  display: block;
}

.c8 {
  padding-bottom: 0;
}

.c2 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  margin-bottom: 3.2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  margin-top: 0;
}

@media (max-width:600px) {
  .c7 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c9 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c4 {
    width: 3.4rem;
    margin-right: 1rem;
  }
}

@media (max-width:600px) {
  .c14 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c16 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c10 {
    margin-bottom: 1rem;
    margin-left: -1rem;
  }
}

@media (max-width:600px) {
  .c12 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c12 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c2 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        fill="none"
        viewBox="0 0 32 32"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 013.562-3.563 3.548 3.548 0 013.563 3.563 3.548 3.548 0 01-3.563 3.563 3.548 3.548 0 01-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112l.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <svg
          fill="none"
          viewBox="0 0 52 52"
        >
          <path
            clip-rule="evenodd"
            d="M17 2L6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 011 1v27h2V5a3 3 0 00-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 01-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 003 3h18zM7 20a1 1 0 100-2 1 1 0 000 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 00-3.563 3.562 3.548 3.548 0 003.563 3.563 3.548 3.548 0 003.563-3.563 3.548 3.548 0 00-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          Page personnalisable
        </div>
        Le contenu de cette page peut être personnalisé en fonction de votre situation.
         
        <a
          href="#customisation"
        >
          Voir en bas de page
        </a>
         pour renseigner votre convention collective.
      </div>
    </div>
  </div>
  <div
    class="c7 c8"
  >
    <div
      class="c9"
    >
      <header
        class="c10 c11"
        id="customisation"
      >
        <h2
          class="c12"
        >
          <div
            class="c13"
          />
          Que dit votre convention collective ?
        </h2>
      </header>
      
      <p>
        Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
      </p>
      <span
        class="c14 c15"
      >
        <input
          class="c16"
          name="q"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
      </span>
      
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render with generic answer 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

<div>
  <section>
    <header
      class="c0"
    >
      <h2
        class="c1"
      >
        <div
          class="c2"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer and content 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  margin-left: auto;
  text-align: left;
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
    margin-left: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

<div>
  <section>
    <header
      class="c0"
    >
      <h2
        class="c1"
      >
        <div
          class="c2"
        />
        Que dit le code du travail ?
      </h2>
    </header>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with no answer 1`] = `<div />`;
